kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: reb
  name: reb-ui
  labels:
    app: reb-ui
spec:
  selector:
    app: reb-ui
  ports:
    - name: web
      port: 3000
