kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: reb
  name: reb-ui-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: letsencrypt
spec:
  rules:
  - host: reb-ui.kodbukucu.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: reb-ui
            port:
              number: 3000
  tls:
  - hosts:
    - reb-ui.kodbukucu.com
